<resources>
    <string name="app_name">Ayur</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_app_api_key">AIzaSyDrvEYdRCJV2iASVBBDlTQDw6NzmPUj2xM</string>
    <string name="article_one">විවිධ රෝග වලට එරෙහිව මානව ශිෂ්ටාචාරයේ අරගලය පිළිබඳ අපූර්ව තොරතුරු රාශියක් වෛද්‍ය විද්‍යාවේ ඉතිහාසය සොයා යාමේ දී අපට හමුවේ. ලොව ඉපැරණිතම වෛද්‍ය ක්‍රම අතර ප්‍රමුඛ ස්ථානයක් ගන්නා ආයුර්වේද වෛද්‍ය විද්‍යාව වසර 5000 ක පමණ පැරණි එහෙත් පුළුල් වූ දැනුම් පද්ධතියක් පදනම් කර ගනිමින් නිර්මාණය වී ඇත.ආයුර්වේදයේ ආරම්භය පිළිබඳ විවිධ මත පවතින අතර වඩාත් පුළුල්ව පිළිගත් මතය වන්නේ ඉපැරණි උත්තර භාරතයේ (උතුරු ඉන්දියාවේ) වේද යුගයේ දී ආරම්භ වී මුඛ පරම්පරාගතව රැගෙන විත් පශ්චාත් වේද යුගයේ වඩාත් දියුණු විද්‍යාවක් බවට පත් වූ බවයි. මේ හේතුව නිසා චතුර්වේදයේ අථර්ව වේදයෙන් ව්‍යුත්පන්න වූ දැනුම පද්ධතියක් ලෙස ආයුර්වේද‌ය හඳුන්වා දිය හැක.ආයුර්වේද වෛද්‍ය ක්‍රමය දෙවිවරුන් වෙතින් භාවනායෝගී සෘෂිවරුන් හරහා මානවයාට ලැබුණු ත්‍යාගයක් ලෙසද ඇතැම් මූලාශ්‍රවල සඳහන්වී ඇත. ආදී යුගයේ උත්තර භාරතයේ හිමාල අඩවියෙහි එවකට සිටි මහා සෘෂිවරුන්ගේ සමුළුවක් පැවැත්වී ඇති බවත් (මෙම සෘෂි සම්මේලනය සඳහා හෙළ දිව නියෝජනය කරමින පුලස්ථි සෘෂි වරයා සහභාගී වූ බව ප්‍රකාශ වේ) එහි දී මිනිසා හට ඇති වන රෝග වලින් මිදී සෞඛ්‍ය සම්පන්න ව දීර්ඝායුෂ විඳීමට හැකි වන සේ ස්වභාවධර්මයේ විවිධ දායාදයන් භාවිතා කර ගත හැකි ක්‍රම පිළිබඳ දැනුම ඔවුන් අතර හුවමාරු වූ බවත් එහි ප්‍රතිඵලයක් වශයෙන් ආයුර්වේද වෛද්‍ය ක්‍රමය බිහි වූ බවත් ඉන්පසුව භාරතය පුරා පැතිර ගිය බවත් බොහෝ මූලාශ්‍රවල දක්වා ඇත.ආයුර්වේදයේ ආරම්භය පිළිබඳ විවිධ මත පැවතිය ද තර්කානුකූල හා ප්‍රායෝගික මූලධර්ම මත පදනම් ව නිර්මාණය වී ඇති ආයුර්වේද වෛද්‍ය ක්‍රමය කාලය සමග වෙනස්වීමකට ලක් නොවන බැවින් යුග පරිවර්තන ගණනාවකට මුහුණ දෙමින් වර්තමානය දක්වා සුරැකී පැවතීමට සමත් ව ඇත.ආයුර්වේදය යනු ආයුෂ පිළිබඳ විද්‍යාවයි. එබැවින් එය ජීවන දර්ශනයක් වශයෙන් ද හැඳින්විය හැක. හින්දු දර්ශනයට අනුව ධන්වන්තරී මහා සෘෂිවරයා ආයුර්වේද වෛද්‍ය විද්‍යාවේ පියා ලෙස දේවත්වයේ තබා සලකනු ලබයි. විශ්ණු දෙවියන්ගේ අවතාරයක් ලෙස ද මහා සෘෂි ධන්වන්තරී සලකනු ලබයි.</string>
    <string name="article_two_intro">අද වේගවත් ලෝකයේ, සැමට යහපත් සෞඛ්‍යයක් අවශ්‍යතාවය වෙන කවරදාටත් වඩා තීරණාත්මක වී තිබේ. ඉහළ යන සෞඛ්‍ය ආරක්ෂණ අභියෝග මධ්‍යයේ, ආයුර්වේද සහ දේශීය වෛද්‍ය ක්‍රමවල ඵලදායී ක්‍රමවේදයන් තුළින් ජනතාවගේ යහපැවැත්ම සුරක්ෂිත කිරීම අත්‍යවශ්‍ය වේ . මෙම සාම්ප්‍රදායික භාවිතයන් ශරීරය, මනස සහ ආත්මයේ අන්තර් සම්බන්ධිතභාවය හඳුනා ගනිමින් පරිපූර්ණ ප්‍රවේශයක් අවධාරණය කරයි . ඔවුන්ගේ සෞඛ්‍යය සඳහා ක්‍රියාකාරී භූමිකාවක් ගැනීමට පුද්ගලයන් බලගැන්වීමෙන් , අපට සැමට සෞඛ්‍ය සම්පන්න සහ වඩා තිරසාර අනාගතයක් ප්‍රවර්ධනය කළ හැකිය.</string>
    <string name="article_two_intro_2">අපගේ දැක්මේ පදනම වන්නේ යහපැවැත්මේ කායික, මානසික සහ අධ්‍යාත්මික අංශයන් ඇතුළත් සෞඛ්‍ය ආරක්ෂණය සඳහා වූ පරිපූර්ණ ප්‍රවේශයකි. මෙම මාන ත්‍රිත්ව ආමන්ත්‍රණය කිරීමෙන්, අපට පුද්ගලයෙකුගේ සෞඛ්‍යය පිළිබඳ පුළුල් අවබෝධයක් සහතික කළ හැකි අතර වඩාත් ගැලපෙන රැකවරණයක් ලබා දිය හැකිය.</string>
    <string name="article_two_intro_3">ශාරීරික සෞඛ්‍යය යහපැවැත්මේ තීරණාත්මක අංගයකි, මන්ද එය ක්‍රියා කිරීමට සහ ජීවිතය භුක්ති විඳීමට අපගේ හැකියාවට සෘජුවම බලපායි. ආයුර්වේදය සහ දේශීය වෛද්‍ය විද්‍යාව නිසි පෝෂණය, ව්‍යායාම සහ ජීවන රටා පිළිවෙත් තුළින් ශාරීරික සෞඛ්‍යය පවත්වා ගැනීම සහ ප්‍රවර්ධනය කිරීම පිළිබඳ දැනුම් සම්භාරයක් ලබා දෙයි.</string>
    <string name="article_two_intro_4">අපගේ සිතුවිලි, හැඟීම් සහ සබඳතා හැඩගස්වන බැවින් මානසික සෞඛ්‍යය ශාරීරික සෞඛ්‍යය මෙන් ම වැදගත් වේ. ආයුර්වේදයේ සහ දේශීය වෛද්‍ය විද්‍යාවේ මූලධර්ම ඒකාබද්ධ කිරීමෙන්, භාවනාව, සිහිය සහ ආතති කළමනාකරණය වැනි ශිල්පීය ක්‍රම තුළින් අපට මානසික යහපැවැත්ම ප්‍රවර්ධනය කළ හැකිය.</string>
    <string name="article_two_intro_5">නවීන සෞඛ්‍ය සේවාව තුළ අධ්‍යාත්මික සෞඛ්‍යය බොහෝ විට නොසලකා හරින නමුත් එය අපගේ සමස්ත යහපැවැත්ම සඳහා වැදගත් කාර්යභාරයක් ඉටු කරයි. අධ්‍යාත්මික සෞඛ්‍යයේ වැදගත්කම පිළිගැනීමෙන්, අපට ජීවිතයේ අරමුණ සහ අර්ථය පිළිබඳ ගැඹුරු හැඟීමක් වර්ධනය කර ගත හැකි අතර, එය අවසානයේ අපගේ සමස්ත සෞඛ්‍යයට සහ සතුටට දායක වේ.</string>
    <string name="article_two_help">අපගේ දැක්මෙහි ප්‍රධාන අංගයක් වන්නේ ඔවුන්ගේ සෞඛ්‍ය සහ යහපැවැත්ම සඳහා ක්‍රියාකාරී භූමිකාවක් ගැනීමට පුද්ගලයින් බලගැන්වීමයි . මෙයට ස්වයං දැනුවත්භාවය වර්ධනය කිරීම, ස්වයං රැකවරණ පිළිවෙත් වැඩි දියුණු කිරීම සහ රෝග අවදානම අවම කිරීම සඳහා වැළැක්වීමේ පියවරයන් ප්‍රවර්ධනය කිරීම ඇතුළත් වේ.</string>
    <string name="article_two_help_1">පුද්ගල සෞඛ්‍ය සේවාව පිළිබඳ දැනුවත් තීරණ ගැනීම සඳහා කෙනෙකුගේ අද්විතීය ව්‍යවස්ථාව සහ සෞඛ්‍ය ඉතිහාසය අවබෝධ කර ගැනීම ඉතා වැදගත් වේ. ආයුර්වේදය සහ දේශීය වෛද්‍ය ක්‍රම මගින් කෙනෙකුගේ පුද්ගලික අවශ්‍යතා ස්වයං තක්සේරුව සහ අවබෝධය සඳහා වටිනා මෙවලම් ඉදිරිපත් කරයි.</string>
    <string name="article_two_help_2">සෞඛ්‍ය සම්පන්න ජීවන රටා පුරුදු සහ ස්වයං රැකවරණ පිළිවෙත් අනුගමනය කිරීමෙන් කෙනෙකුගේ සෞඛ්‍යය සහ යහපැවැත්ම සැලකිය යුතු ලෙස වැඩිදියුණු කළ හැකිය. නිතිපතා ව්‍යායාම කිරීම, ප්‍රමාණවත් නින්දක් සහ සමබර ආහාර වේලක් පවත්වා ගැනීම වැනි සරල ක්‍රියාකාරකම් දිගුකාලීන සෞඛ්‍යයක් සඳහා ශක්තිමත් පදනමක් නිර්මාණය කළ හැකිය.</string>
    <string name="article_two_help_3">වැලැක්වීම ආයුර්වේදයේ සහ දේශීය වෛද්‍ය ක්‍රමයේ ප්‍රධාන සිද්ධාන්තයක් වන අතර, එය රෝගාබාධ වඩාත් බරපතල වීමට පෙර ඒවාට මූලික හේතු සොයා ගැනීමට උපකාරී වේ. වැළැක්වීමේ පියවරයන් ප්‍රවර්ධනය කිරීමෙන් අපට සෞඛ්‍ය සේවා පද්ධති මත බර අඩු කර සමස්ත මහජන සෞඛ්‍යය වැඩිදියුණු කළ හැකිය.</string>


</resources>

